--- a/css/styles.css
+++ b/css/styles.css
@@ -129,6 +129,10 @@ body {
 }
 .team-name {
   color: var(--title-cl);
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.18;
+  text-align: center;
 }
 
 /* Portfolio */
